--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,31 @@
-[dev]
-  command = "vite preview"
-  targetPort = 4173
-  publish = "public"
-  dev = true
-
 [build]
-functions = "./functions"
+  # Build command for Vite
+  command = "npm run build"
+  # Directory to publish (Vite builds to 'dist' by default)
+  publish = "dist"
+  # Functions directory
+  functions = "./functions"
+
+[build.environment]
+  # Node version for build
+  NODE_VERSION = "18"
+
+# Redirect rules for SPA
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+# Headers for security and performance
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+[[headers]]
+  for = "/static/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
