--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "framework": null,
   "functions": {
     "functions/*.ts": {
-      "runtime": "@vercel/node"
+      "runtime": "nodejs18.x"
     }
   },
   "rewrites": [
